[package]
name = "telegoose"
version = "0.1.0"
authors = ["Yi Feng Yang <yifeng@yfyang.dev>"]
edition = "2018"
description = "A companion bot to GooseSplitter"
readme = "README.md"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
teloxide = {version = "0.4.0", features = ["auto-send", "macros"]}
log = "0.4.14"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.5", features = ["rt-multi-thread", "macros"] }
anyhow = "1.0.40"
futures = "0.3.14"